# advent-of-code

./: .gitignore  Day_1.hs  Day_10.hs  Day_11.hs  Day_12.hs  Day_13.hs  Day_15.hs  Day_18.hs  Day_19.hs  Day_2.hs  Day_20.hs  Day_22-part1.hs  Day_22_part_2.hs  Day_23.hs  Day_24.hs  Day_25.hs  Day_4.hs  Day_5.hs  Day_6.hs  Day_7.hs  Day_8.hs  Day_9.hs  Main.hs  Util.hs  _Day_3.hsplay  _Day_8.hsplay  _Main.hsplay  adventofcode.cabal  dune  dune-project
2015/: .gitignore  2015.opam  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  dune  util.ml
2015/day_02/: day_02.ml  dune
2015/day_03/: dune
2015/day_04/: dune
2015/day_05/: dune
2015/day_06/: day_06.ml  dune  matrix.ml
2015/day_07/: day_07.ml  dune
2015/day_08/: day_08.ml  dune
2015/day_09/: dune  main.ml
2015/day_10/: day_10.ml  dune
2015/day_11/: dune  main.ml
2015/day_12/: day_12.ml  dune
2015/day_13/: dune  main.ml
2015/day_14/: day_14.ml  dune
2015/day_15/: day_15.ml  dune
2015/day_16/: day_16.ml  dune
2015/day_17/: dune  main.ml
2016/: .gitignore  dune
2016/01_no_time_for_a_taxicab/: dune  taxi.ml
2016/02_bathroom_security/: bathroom.ml  dune
2016/03_squares_with_three_sides/: dune  squares.ml
2016/04_security_through_obscurity/: dune  obscurity.ml
2016/05_a_nice_game_of_chess/: door_passwords.ml  dune
2016/06_signals_and_noise/: dune  repetition.ml
2016/08_two-factor_authentication/: dune
2016/09_explosives_in_cyberspace/: dune  explode.ml
2016/10_balance_bots/: chips.ml  dune
2016/11_radioisotope_thermoelectri_generators/: dune  generators.ml
2016/12_leonardos_monorail/: assembly.ml  dune
2016/13_a_maze_of_twisty_little_cubicles/: dune  search.ml
2016/14_one_time_pad/: dune  salt.ml
2016/16_dragon_checksum/: curves.ml  dune
2016/17_two_steps_forward/: dune  vault.ml
2016/18_like_a_rouge/: dune  traps.ml
2016/19_an_elephant_named_joseph/: dune  elves.ml
2016/20_firewall_rules/: dune  range.ml
2016/21_scrambled_letters_and_hash/: dune  scramble.ml
2016/22_grid_computing/: data.ml  dune
2017/: Day_10.hs  Day_16.hs  Day_17.hs  Day_18.hs  Day_21.hs  Day_3.hs  Day_7.hs  _Day_2.hsplay  _Day_4.hsplay  _Day_5.hsplay  _Day_6.hsplay  _Day_7.hsplay  cabal.sandbox.config  day_01.ml  day_02.ml  day_05.ml  day_07.ml  day_08.ml  day_11.ml  dune  stack.yaml
2017-haskell/: Day_1.hs  Day_14.hs  Day_2.hs  Day_22_part_2.hs  Day_4.hs  Day_6.hs  Day_7.hs
2017-ocaml/: day_02.ml  day_04.ml  day_06.ml  day_08.ml  dune
2018/: dune
2018/day_01/: day_01.ml  dune
2018/day_02/: dune  main.ml
2018/day_03/: dune  main.ml
2018/day_04/: dune  main.ml
2018/day_05/: dune  main.ml
2018/day_06/matrix/: dune
2019/: .gitignore  bsconfig.json  package.json
2019/sources/: AdventOfCode.re  Day01.re  Day02.re  Day03.re  Day04.re  Day05.re  Day06.re  Day07.re  Day08.re  Day09.re  Day10.re  Day11.re  Day12.re  Day12.txt  Day13.re  Day14.re  Day15-maze.txt  Day15.re  Day16.re  Day16.txt  Day17-maze.txt  Day17.re  Day18.re  Day18Part2.txt  Day19.re  Day20.re  Day21.re  Day24.re  Day25.re
toolbox/: channel.ml  compass.ml  dune  int.ml  list.ml  parser.ml  point.ml  sequence.ml  string.ml
