name: adventofcode
version: 1.0
cabal-version: 1.22
build-type: Simple
license: MIT
stability: experimental
author: Dean Merchant
data-files:
    Day_1.txt
    Day_10.txt
    Day_11.txt
    Day_12.txt
    Day_13.txt
    Day_16.txt
    Day_18.txt
    Day_19.txt
    Day_2.txt
    Day_21.txt
    Day_22.txt
    Day_4.txt
    Day_5.txt
    Day_7.txt
    Day_8.txt
    Day_9.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable adventofcode
  main-is: Main.hs
  buildable: True
  build-depends:
      base == 4.9.1.0,
      containers == 0.5.7.1,
      matrix == 0.3.5.0,
      megaparsec == 5.2.*,
      monad-loops == 0.4.3,
      mtl == 2.2.1,
      parallel == 3.2.1.1,
      Unique -any,
      raw-strings-qq == 1.1,
      split == 0.2.3.1,
      text == 1.2.2.1,
      vector == 0.11.0.0
  default-language: Haskell2010
  other-modules:
      Day_1
      Day_2
      Day_3
      Day_4
      Day_5
      Day_6
      Day_7
      Day_8
      Day_9
      Day_10
      Day_11
      Day_12
      Day_13
      Day_14
      Day_15
      Day_16
      Day_17
      Day_18
      Day_19
      Day_20
      Day_21
      Day_22
      Day_23
      Day_24
      Day_25
      Util
