(library
  (name twenty_fifteen)
  (libraries 
    angstrom 
    core 
    stdint 
    owl
    yojson
  )  
  (preprocess (pps ppx_jane))
  (inline_tests)
)

(alias
  (name runtest)
  (deps 
    day_02.txt
    day_03.txt
    day_05.txt
    day_06.txt
    day_07.txt
    day_08.txt
    day_12.json
  )
)